--- a/server/.classpath
+++ b/server/.classpath
@@ -8,7 +8,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="javax.servlet-api-3.0.1.jar"/>
-	<classpathentry kind="lib" path="java-json.jar"/>
+	<classpathentry exported="true" kind="lib" path="java-json.jar"/>
+	<classpathentry exported="true" kind="lib" path="javax.servlet-api-3.0.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
